--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,18 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/themes": "^3.1.3",
+    "@types/react-transition-group": "^4.4.11",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.7.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.1.2",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
